--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,16 @@
 			<artifactId>guava</artifactId>
 			<version>17.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.4.1</version>
+		</dependency>
 	</dependencies>
 
 
